discussion/kv_engine/151917/151917_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

CBSS-501 stats: Add flushQSize and flushQTime histogram stats

Change-Id: Ie5ac7dde17f851b76b6f560fde6f7d6890610c92

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-04-22 21:48:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-22 22:27:44.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30128/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45:
error: no member named "ReadTimeHisto" in "magma::MagmaFileStats"; did you mean "readTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30128/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35173/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2506): error C2039: "ReadTimeHisto": is not a member of "magma::MagmaFileStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35173/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8474/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45: error: no member named "ReadTimeHisto" in "magma::MagmaFileStats"; did you mean "readTimeHisto"? [clang-diagnostic-error]
            prefix, "fsReadTime", fileStats.ReadTimeHisto, add_stat, c);
                                            ^~~~~~~~~~~~~
                                            readTimeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:33:26: note: "readTimeHisto" declared here
    MicrosecondHistogram readTimeHisto;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2508:46: error: no member named "WriteTimeHisto" in "magma::MagmaFileStats"; did you mean "writeTimeHisto"? [clang-diagnostic-error]
            prefix, "fsWriteTime", fileStats.WriteTimeHisto, add_stat, c);
                                             ^~~~~~~~~~~~~~
                                             writeTimeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:34:26: note: "writeTimeHisto" declared here
    MicrosecondHistogram writeTimeHisto;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2510:45: error: no member named "SyncTimeHisto" in "magma::MagmaFileStats"; did you mean "syncTimeHisto"? [clang-diagnostic-error]
            prefix, "fsSyncTime", fileStats.SyncTimeHisto, add_stat, c);
                                            ^~~~~~~~~~~~~
                                            syncTimeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:35:26: note: "syncTimeHisto" declared here
    MicrosecondHistogram syncTimeHisto;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2512:43: error: no member named "DeleteTimeHisto" in "magma::MagmaFileStats"; did you mean "deleteTimeHisto"? [clang-diagnostic-error]
            prefix, "fsDelete", fileStats.DeleteTimeHisto, add_stat, c);
                                          ^~~~~~~~~~~~~~~
                                          deleteTimeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:36:26: note: "deleteTimeHisto" declared here
    MicrosecondHistogram deleteTimeHisto;
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2514:45: error: no member named "ReadSizeHisto" in "magma::MagmaFileStats"; did you mean "readSizeHisto"? [clang-diagnostic-error]
            prefix, "fsReadSize", fileStats.ReadSizeHisto, add_stat, c);
                                            ^~~~~~~~~~~~~
                                            readSizeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:40:23: note: "readSizeHisto" declared here
    Histogram<size_t> readSizeHisto = {ExponentialGenerator<size_t>(1, 2), 25};
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2516:46: error: no member named "WriteSizeHisto" in "magma::MagmaFileStats"; did you mean "writeSizeHisto"? [clang-diagnostic-error]
            prefix, "fsWriteSize", fileStats.WriteSizeHisto, add_stat, c);
                                             ^~~~~~~~~~~~~~
                                             writeSizeHisto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/stats.h:39:23: note: "writeSizeHisto" declared here
    Histogram<size_t> writeSizeHisto = {ExponentialGenerator<size_t>(1, 2), 25};
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2518:5: error: unknown type name "MagmaHistogramStats" [clang-diagnostic-error]
    MagmaHistogramStats histoStats;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:12: error: no member named "GetHistogramStats" in "magma::Magma" [clang-diagnostic-error]
    magma->GetHistogramStats(histoStats);
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8474/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45:
error: no member named "ReadTimeHisto" in "magma::MagmaFileStats"; did you mean "readTimeHisto"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8474/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10392/ : FAILURE

Compile error at [2021-04-22T21:50:24.064Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45:
error: no member named "ReadTimeHisto" in "magma::MagmaFileStats"; did you mean "readTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10392/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10145/ : FAILURE

Compile error at [2021-04-22T21:50:54.312Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45:
error: ?struct magma::MagmaFileStats? has no member named ?ReadTimeHisto?; did you mean ?readTimeHisto??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10145/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9073/ : FAILURE

Compile error at [2021-04-22T21:50:42.634Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2506:45:
error: no member named "ReadTimeHisto" in "magma::MagmaFileStats"; did you mean "readTimeHisto"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9073/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17943/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10004/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
